Adicionado audio e video

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <h3>Tecnologia &nbsp; > &nbsp; Inovações</h3>
                         <h1>Saiba tudo sobre o Google Glass Enterprise Edition 2</h1>
                         <h2>por Fernando Venturini</h2>
-                        <h3 class="direita">Atualizado em 03/12/2021</h3>
+                        <h3 class="direita">Atualizado em 09/12/2021</h3>
                     </hgroup>
                 </header>
 
@@ -133,7 +133,10 @@
                     fotos a
                     partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências.</p>
 
-                AQUI ENTRA UM VIDEO
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/4EvNxWhskf8"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
             </article>
         </section>
 
@@ -141,7 +144,10 @@
             <h1>Outras Notícias</h1>
             <h2>Vídeo mais recente</h2>
 
-            AQUI ENTRA UM VIDEO
+            <iframe width="450" height="315" src="https://www.youtube.com/embed/SIPXaB0bQD0"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
 
             <h2>Novidade no Glass</h2>
             <p>O site Android Police reporta que os óculos inteligentes do Google agora podem exibir ao usuário um
