--- a/fotos.html
+++ b/fotos.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="_css/style.css">
+    <link rel="stylesheet" href="_css/fotos.css">
     <title>Tudo sobre Google Glass Enterprise Edition 2</title>
 </head>
 
@@ -36,10 +37,34 @@
                     </li>
                     <li onmouseover="mudaFoto('../_imagens/fale-conosoco.png')"
                         onmouseout="mudaFoto('../_imagens/fotos.png')"><a href="fale-conosco.html">Fale
-                            Conosco</a></li>
+                        Conosco</a></li>
                 </ul>
             </nav>
         </header>
+
+        <!--   SECTION   -->
+        <section id="corpo-full">
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <hgroup>
+                        <h3>Glass > Fotos</h3>
+                        <h1>Galeria de imagens do Google Glass</h1>
+                        <h2>por Fernando Venturini</h2>
+                        <h3 class="direita">Atualizado em 09/12/2021</h3>
+                    </hgroup>
+                </header>
+                <p>Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.</p>
+
+                <ul id="album-fotos">
+                    <li id="foto01"><span>Agenda e lembretes</span></li>
+                    <li id="foto02"><span>Sergey Brin usando o Glass</span></li>
+                    <li id="foto03"><span>Leve e compacto</span></li>
+                    <li id="foto04"><span>Sensação de uma tela de 50"</span></li>
+                    <li id="foto05"><span>Vários tipos de lente</span></li>
+                    <li id="foto06"><span>Informações importantes</span></li>
+                </ul>
+            </article>
+        </section>
 
         <footer id="rodape">
             <p>Copyright &copy; 2021 - Fernando Venturini</p>
