--- a/multimidia.html
+++ b/multimidia.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="_css/style.css">
+    <link rel="stylesheet" href="_css/media.css">
     <title>Tudo sobre Google Glass Enterprise Edition 2</title>
 </head>
 
@@ -36,10 +37,35 @@
                     </li>
                     <li onmouseover="mudaFoto('../_imagens/fale-conosoco.png')"
                         onmouseout="mudaFoto('../_imagens/multimidia.png')"><a href="fale-conosco.html">Fale
-                            Conosco</a></li>
+                        Conosco</a></li>
                 </ul>
             </nav>
         </header>
+
+        <!--   SECTION   -->
+        <section id="corpo-full">
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <hgroup>
+                        <h3>Glass > Multimidia</h3>
+                        <h1>Sons e Vídeos</h1>
+                        <h2>por Fernando Venturini</h2>
+                        <h3 class="direita">Atualizado em 09/12/2021</h3>
+                    </hgroup>
+                </header>
+
+                <div id="tv-radio" controls="controls">
+                    <audio id="musica" controls="controls">
+                        <source src="_media/A Face in a Cloud - Nathan Moore.mp3" type="audio/mpeg">
+                        <source src="_media/A Face in a Cloud - Nathan Moore.mp4" type="audio/x-aac">
+                        <source src="_media/A Face in a Cloud - Nathan Moore.ogg" type="audio/ogg">
+                        Desculpe, mas não foi possível carregar o aúdio.
+                    </audio>
+                    
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/4EvNxWhskf8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </article>
+        </section>
 
         <footer id="rodape">
             <p>Copyright &copy; 2021 - Fernando Venturini</p>
