--- a/specs.html
+++ b/specs.html
@@ -8,11 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="_css/style.css">
+    <link rel="stylesheet" href="_css/specs.css">
     <title>Tudo sobre Google Glass Enterprise Edition 2</title>
 </head>
 
 <body>
     <div id="interface">
+        <!--   HEADER CABEÇALHO   -->
         <header id="cabecalho">
             <hgroup>
                 <h1>Google Glass Enterprise Edition 2</h1>
@@ -21,16 +23,17 @@
 
             <img id="icone" src="_imagens/glass-oculos.png" alt="">
 
+            <!--   NAV MENU  -->
             <nav id="menu">
                 <h1>Menu Principal</h1>
                 <ul>
-                    <li onmouseover="mudaFoto('../_imagens/home.png')"
-                        onmouseout="mudaFoto('../_imagens/spec.png')"><a href="index.html">Home</a></li>
-                    <li onmousemove="mudaFoto('../_imagens/spec.png')"
-                        onmouseout="mudaFoto('../_imagens/spec.png')"><a href="specs.html">Especificações</a>
+                    <li onmouseover="mudaFoto('../_imagens/home.png')" onmouseout="mudaFoto('../_imagens/spec.png')"><a
+                            href="index.html">Home</a></li>
+                    <li onmousemove="mudaFoto('../_imagens/spec.png')" onmouseout="mudaFoto('../_imagens/spec.png')"><a
+                            href="specs.html">Especificações</a>
                     </li>
-                    <li onmouseover="mudaFoto('../_imagens/fotos.png')"
-                        onmouseout="mudaFoto('../_imagens/spec.png')"><a href="fotos.html">Fotos</a></li>
+                    <li onmouseover="mudaFoto('../_imagens/fotos.png')" onmouseout="mudaFoto('../_imagens/spec.png')"><a
+                            href="fotos.html">Fotos</a></li>
                     <li onmouseover="mudaFoto('../_imagens/multimidia.png')"
                         onmouseout="mudaFoto('../_imagens/spec.png')"><a href="multimidia.html">Multimídias</a>
                     </li>
@@ -41,12 +44,42 @@
             </nav>
         </header>
 
+        <!--   SECTION   -->
+        <section id="corpo-full">
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <hgroup>
+                        <h3>Glass > Especificações</h3>
+                        <h1>Raio-x no Google Glass</h1>
+                        <h2>por Fernando Venturini</h2>
+                        <h3 class="direita">Atualizado em 09/12/2021</h3>
+                    </hgroup>
+                </header>
+                <p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google
+                    Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
+
+                <section id="conteudo">
+                    <img src="../_imagens/glass-esquema-marcado.jpg" usemap="#meumapa" alt="">
+                    <map name="meumapa">
+                        <area shape="rect" coords="179,202,270,260" href="google-glass.html#tela" target="janela" alt="">
+                        <area shape="circle" coords="158,243,12" href="google-glass.html#camera" target="janela" alt="">
+                        <area shape="circle" coords="76,52,12" href="google-glass.html#gadgets" target="janela" alt="">
+                        <area shape="poly" coords="28,143,83,216,84,249,27,169" href="google-glass.html#sensores " target="janela" alt="">
+                    </map>
+                    <iframe src="google-glass.html" name="janela" id="frame-spec" frameborder="0"></iframe>
+                </section>
+
+            </article>
+        </section>
+
+        
+
+        <!--  FOOTER  -->
         <footer id="rodape">
             <p>Copyright &copy; 2021 - Fernando Venturini</p>
             <p><a href="https://sites.google.com/view/lvfcode/home" target="_blank">&ltLVF_CODE&gt</a></p>
         </footer>
     </div>
-
 
     <!--JAVASCRIPT-->
     <script src="_javascript/script.js"></script>
