--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="interface">
         <header id="cabecalho">
             <hgroup>
-                <h1>Google Glass Enterprise Edition</h1>
+                <h1>Google Glass Enterprise Edition.</h1>
                 <h2>A Revolução do Google chegou!!!</h2>
             </hgroup>
 
