Adicionado section, header.

--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -41,6 +41,20 @@
             </nav>
         </header>
 
+        <!--   SECTION   -->
+        <section id="corpo-full">
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <hgroup>
+                        <h3>Glass > Fotos</h3>
+                        <h1>Galeria de imagens do Google Glass</h1>
+                        <h2>por Fernando Venturini</h2>
+                        <h3 class="direita">Atualizado em 09/12/2021</h3>
+                    </hgroup>
+                </header>
+            </article>
+        </section>
+
         <footer id="rodape">
             <p>Copyright &copy; 2021 - Fernando Venturini</p>
             <p><a href="https://sites.google.com/view/lvfcode/home" target="_blank">&ltLVF_CODE&gt</a></p>
