--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -46,7 +46,7 @@
             <article id="noticia-principal">
                 <header id="cabecalho-artigo">
                     <hgroup>
-                        <h3>Glass > Fotos</h3>
+                        <h3>Glass > Fale Conosco</h3>
                         <h1>Galeria de imagens do Google Glass</h1>
                         <h2>por Fernando Venturini</h2>
                         <h3 class="direita">Atualizado em 09/12/2021</h3>
